fix: revert stempeluhr icon to vertical-align: middle
In der vorherigen Korrektur wurde das Icon auf 'vertical-align: baseline'
gesetzt. Material Icons haben jedoch eine tiefere Font-Baseline als
Roboto-Text. Dadurch ragte der Stift unter die Text-Baseline und
drückte die Zeilenhöhe um ~5px nach unten. 'middle' zentriert das
Icon auf der Textmitte – es passt dann in die bestehende Zeilenhöhe.

--- a/src/app/feature/day-plan/stempeluhr/stempeluhr.scss
+++ b/src/app/feature/day-plan/stempeluhr/stempeluhr.scss
@@ -46,7 +46,6 @@
 
 .stempeluhr__value .material-icons {
   line-height: 1;
-  vertical-align: baseline;
 }
 
 @include mixins.mobile {
